<resources>
    <string name="app_name">Desafio 1 DSM</string>
    <string name="imgViewDescription">Imagen ecuacion cuadratica</string>
    <string name="detalle">Detalle</string>
    <string name="textview">TextView</string>
    <string name="nombre">Nombre:</string>
    <string name="mes">Mes:</string>
    <string name="ventas">Ventas</string>
    <string name="ventass">Ventas:</string>
    <string name="porcentaje">Porcentaje:</string>
    <string name="comision">Comision</string>
    <string name="salir">Salir</string>
    <string name="codigo">Codigo:</string>
    <string name="total">Total</string>
    <string name="zero">0.0</string>
</resources>